--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
     </nav>
   </header>
   <main>
-    <button id="btnEnviarWhatsapp" class="add">Solicitar pedido</button>
+    <button id="carrinho" class="add">Carrinho</button>
+
+<!-- Modal -->
+<div id="modalOverlay">
+  <div id="modalContent">
+    <button id="modalCloseBtn" aria-label="Fechar modal">&times;</button>
+    <h2 id="tituloModal">Carrinho</h2>
+    <p id="modalMensagem"></p>
+    <button id="btnFinalizarPedido">Finalizar pedido</button>
+  </div>
+</div>
     <section class="produtos">
       
     </section>
